SDKs/apideck.com/webhook/8.85.0/python/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
pip install openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```python
import sdk
from sdk.models import operations, shared

s = sdk.SDK()
s.config_security(
    security=shared.Security(
        api_key=shared.SchemeAPIKey(
            api_key="YOUR_API_KEY_HERE",
        ),
    )
)
    
req = operations.WebhooksAddRequest(
    security=operations.WebhooksAddSecurity(
        api_key=shared.SchemeAPIKey(
            api_key="YOUR_API_KEY_HERE",
        ),
    ),
    headers=operations.WebhooksAddHeaders(
        x_apideck_app_id="quidem",
    ),
    request=shared.CreateWebhookRequest(
        delivery_url="incidunt",
        description="ratione",
        events=[
            "crm.lead.updated",
        ],
        status="enabled",
        unified_api="transactional-email",
    ),
)
    
res = s.webhooks.webhooks_add(req)

if res.create_webhook_response is not None:
    # handle response
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Webhooks

* `webhooks_add` - Create webhook
* `webhooks_all` - List webhooks
* `webhooks_delete` - Delete webhook
* `webhooks_execute` - Execute a webhook
* `webhooks_one` - Get webhook
* `webhooks_resolve` - Resolve and Execute a connection webhook
* `webhooks_short_execute` - Execute a webhook
* `webhooks_update` - Update webhook

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
